# rust-angelscript

./: Cargo.toml  README.md
angelscript/: Cargo.toml  LICENSE
angelscript-sys/: Cargo.toml  bindgen_asc.rs  build.rs
angelscript-sys/cpp/add_on/clib/: CMakeLists.txt  angelscript_c.h
angelscript-sys/src/: c_context.rs  c_core.rs  c_engine.rs  c_function.rs  c_generic.rs  c_module.rs  c_object.rs  c_typeinfo.rs  lib.rs
angelscript-testbed/: .gitignore  Cargo.toml  bindgen_asc.rs  build.rs
angelscript-testbed/angelscript-sys/: bindgen_asc.rs
angelscript-testbed/angelscript-sys/cpp/add_on/clib/: as_c.cpp
angelscript-testbed/angelscript-sys/src/: c_module.rs  lib.rs
angelscript-testbed/angelscript/src/: engine.rs  engine_macros.rs  lib.rs  module.rs  types.rs
angelscript-testbed/cpp/: CMakeLists.txt
angelscript-testbed/cpp/angelscript/projects/cmake/: CMakeLists.txt
angelscript-testbed/src/: angelscript.rs  main.rs
angelscript-testbed/src/angelscript/: engine.rs  engine_c.rs  engine_macros.rs  types.rs
angelscript-testbed/test-app/src/: main.rs
angelscript/src/: context.rs  engine.rs  engine_macros.rs  function.rs  lib.rs  module.rs  object.rs  typeinfo.rs  types.rs
angelscript_derive/: Cargo.toml
angelscript_derive/src/: lib.rs
test-app/: Cargo.toml  build.rs
test-app/src/: main.rs
