[package]
name = "angelscript-sys"
version = "0.1.0"
authors = ["Dusten Sobotta <dusten@sentinel-engine.org>"]
description = "Rust FFI bindings to the AngelScript C/C++ library."
repository = "https://github.com/dsobotta/rust-angelscript"
keywords = ["bindings", "ffi", "angelscript"]
license = "MIT"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

[build-dependencies]
cmake = "0.1.31"
