[package]
name = "angelscript"
version = "0.1.1"
authors = ["Dusten Sobotta <dusten@sentinel-engine.org>"]
description = "Rust wrapper to the AngelScript C/C++ library."
repository = "https://github.com/dsobotta/rust-angelscript"
keywords = ["bindings", "angelscript"]
license-file = "LICENSE"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
angelscript-sys = { path = "../angelscript-sys" }

[build-dependencies]
