[package]
name = "angelscript_derive"
version = "0.1.0"
authors = ["Dusten Sobotta <dusten@sentinel-engine.org>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
angelscript = { path = "../angelscript", version = "0.1" }
syn = { version = "1.0.16", features = ["full", "extra-traits"] }
quote = "1.0.2"