[package]
name = "test-app"
version = "0.1.0"
authors = ["Dusten Sobotta <dusten@sentinel-engine.org>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
angelscript-sys = { path = "../angelscript-sys" }
angelscript = { path = "../angelscript" }
angelscript_derive = { path = "../angelscript_derive" }
